Address modernization violations
Upgraded modernizer is flagging Lists.newArrayList() use. Replace them
with plain List.of().

Also ditch use of javax.xml.bind.DatatypeConverter() in favor of
HexFormat.

Change-Id: I1c760009fc94ce2bf8b783ed1005dae0334a9a02
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>
(cherry picked from commit f8ecf5736ff1c190a94c5f3f6ee42449afd99ebd)
(cherry picked from commit ee237931cefb1b41d9d57178fe8169e4112d866c)